评估时间的service，不再是普通的函数，而是只调用DAO的方法。
